# Cross-Border-User-Service

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
src/app/: main.py
src/app/domain/entities/: user.py
src/app/domain/exceptions/: __init__.py  base.py  email.py  first_name.py  last_name.py  middle_name.py  phone.py  raw_password.py
src/app/domain/ports/: __init__.py  password_hasher.py
src/app/domain/services/: user.py
src/app/domain/values/: __init__.py  base.py  email.py  first_name.py  hashed_password.py  last_name.py  middle_name.py  phone.py  raw_password.py  user_id.py
src/app/infrastructure/adapters/: password_hasher.py  types.py
src/app/infrastructure/exceptions/: __init__.py  base.py  password_hasher.py
tests/unit/domain/entities/: conftest.py  test_user_entity.py
tests/unit/domain/values/: test_email.py  test_first_name.py  test_last_name.py  test_middle_name.py  test_phone.py  test_user_id.py
